# python-for-networking

./: 404.html  index.html  mkdocs.yml  notes.md  pyproject.toml  sitemap.xml  styles.css
docs/: index.md
docs/getting_started/: getting_familiar_with_pycharm.md  git_crashcourse.md  introduction.md  pep8_overview.md  scope_rules_in_python.md  the_main_issue.md  virtual_environments.md
docs/python_advanced/: introduction.md
docs/python_beginner/: elementary_datatypes.md
docs/python_intermediate/: introduction.md
docs/python_mastery/: introduction.md
getting_started/getting_familiar_with_pycharm/: index.html
getting_started/git_crashcourse/: index.html
getting_started/introduction/: index.html
getting_started/pep8_overview/: index.html
getting_started/scope_rules_in_python/: index.html
getting_started/the_main_issue/: index.html
getting_started/virtual_environments/: index.html
overrides/: main.html  styles.css
python_advanced/introduction/: index.html
python_beginner/elementary_datatypes/: index.html
python_beginner/introduction/: index.html
python_intermediate/introduction/: index.html
python_mastery/introduction/: index.html
search/: search_index.json
